--- a/20180425_Examen02_025618/.project
+++ b/20180425_Examen02_025618/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>20180228_EXAMEN01_25618</name>
+	<name>20180425_Examen02_025618</name>
 	<comment></comment>
 	<projects>
 	</projects>
